--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -1,4 +1,5 @@
 # FROM gcr.io/google_containers/coredns:1.5.0
-FROM gcr.io/google_containers/coredns:1.7.0
+# FROM gcr.io/google_containers/coredns:1.7.0
+FROM gcr.io/google_containers/coredns:1.9.3
 MAINTAINER www.luyouli.com
 
