--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -1,5 +1,3 @@
-# FROM gcr.io/google_containers/coredns:1.5.0
-# FROM gcr.io/google_containers/coredns:1.7.0
-FROM gcr.io/google_containers/coredns:1.9.3
+FROM registry.k8s.io/coredns/coredns:v1.9.3
 MAINTAINER www.luyouli.com
 
